tests/NormalTests/paczka1/fuzzy1/14578159.err
Error in line 1: A118 A927 15,2
Error in line 13: 3grsRtwcsj S228 58,7
Error in line 15: z0nR4AH A825 30,0
Error in line 25: 3grsRtwcsj A118 177,80
Error in line 14: 3grsRtwcsj A118 83,5
Error in line 30: Sqf6 A118 34,5
Error in line 33: 2T47bkVa Aa25 9a,0
Error in line 24: 7vgTv3a9LrR A927 8,0
